--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
   background-size: cover;
   color: #fff;
   font-family: 'Creepster', cursive;
-  margin: 0;
-  padding: 0;
+  margin:0;
+  padding:0;
 }
 
 header {
@@ -38,10 +38,11 @@ main {
 }
 
 .post {
-  background: rgba(0,0,0,0.5);
+  background: rgba(0,0,0,0.6);
   padding: 10px;
   margin: 10px 0;
   border-radius: 8px;
+  box-shadow: 0 0 10px orange;
 }
 
 .post img {
